# gpg-local

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
e2e/: app.spec.ts  decrypt-file.spec.ts  encrypt-file.spec.ts  file-browser.spec.ts  refresh.spec.ts
specs/features/: 01-tauri-wrapper.md  02-gpg-library.md  03-file-browse.md  04-encrypt-file.md  05-decrypt-file.md  06-refresh.md
src/: App.sidebar.test.tsx  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helpers.rs  keyring.rs  lib.rs  tests.rs  types.rs
src/components/: DecryptDialog.test.tsx  DecryptDialog.tsx  EncryptDialog.test.tsx  EncryptDialog.tsx  FileList.test.tsx  FileList.tsx  FolderTree.test.tsx  FolderTree.tsx  ModeTabBar.test.tsx  ModeTabBar.tsx  PathBreadcrumb.test.tsx  PathBreadcrumb.tsx
src/components/ui/: breadcrumb.tsx  button.tsx  context-menu.tsx  dialog.tsx  input.tsx  resizable.tsx  tabs.tsx  toast.tsx
src/hooks/: useDirectory.test.ts  useDirectory.ts
src/lib/: platform.ts
src/test/: setup.ts
src/types/: fs.ts
src/utils/: decryptedOutputPath.test.ts  decryptedOutputPath.ts
