[package]
name = "gpg-local"
version = "0.1.0"
description = "GPG Local — desktop file encryption via GPG"
authors = []
license = "MIT"
repository = "https://github.com/sitMCella/gpg-local"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sequoia-openpgp = { version = "1", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
    "compression",
    "compression-deflate",
    "compression-bzip2",
] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
